--- a/algorithms/Binary Search.ipynb
+++ b/algorithms/Binary Search.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def binary_search(lst, x):\n",
+    "def binary_search(array, item):\n",
     "    \"\"\"\n",
     "    parameters\n",
     "    \n",
@@ -23,23 +23,23 @@
     "    x: item to search for\n",
     "    splits input in half on each recursive call, therefore log(n) time\n",
     "    \"\"\"\n",
-    "    mid = len(lst) / 2\n",
-    "    print lst\n",
-    "    print lst[mid]\n",
-    "    if len(lst) < 1:\n",
+    "    midpoint = len(array) / 2\n",
+    "    if len(array) <= 1 and item != array:\n",
     "        return False\n",
-    "    elif x == lst[mid]:\n",
+    "    if item == array[midpoint]:\n",
     "        return True\n",
-    "    elif x > lst[mid]:\n",
-    "        return binary_search(lst[mid:], x)\n",
+    "    elif item < array[midpoint]:\n",
+    "        return binary_search(array[:midpoint], item)\n",
     "    else:\n",
-    "        return binary_search(lst[:mid], x)\n",
+    "        return binary_search(array[midpoint:], item)\n",
+    "\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -60,9 +60,7 @@
      "output_type": "stream",
      "text": [
       "[1, 2, 3, 4, 5, 9, 10]\n",
-      "4\n",
-      "[4, 5, 9, 10]\n",
-      "9\n"
+      "[4, 5, 9, 10]\n"
      ]
     },
     {
@@ -71,7 +69,7 @@
        "True"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,12 +80,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[3, 4]\n",
+      "[4]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search([1, 2, 3, 4], 17)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def sequential_search(array, item):\n",
+    "    for i in array:\n",
+    "        if i == item:\n",
+    "            return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequential_search([1, 4, 2, 1, 1], 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "54%11"
+   ]
   },
   {
    "cell_type": "code",
