--- a/algorithms/Merge Sort.ipynb
+++ b/algorithms/Merge Sort.ipynb
@@ -11,189 +11,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 269,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "n = [5, 4, 1, 8, 7, 2, 6, 3] # input\n",
-    "output = [1, 2, 3, 4, 5, 6 ,7, 8] # output"
+    "n = [4, 5, 3, 2, 1] # input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 277,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def merge_sort(n):\n",
-    "    print \"input:\", n\n",
-    "    if len(n) > 1:\n",
-    "        mid = len(n)//2\n",
-    "        left = merge_sort(n[:mid]) # splits left side until only one element then returns that element\n",
-    "        right = merge_sort(n[mid:])\n",
-    "        print \"left:\", left\n",
-    "        print \"right:\", right\n",
-    "        return merge(n, left, right)\n",
+    "def mergesort(array):\n",
+    "    \"0(logn) for sort * 0(n) merge\"\n",
+    "    if len(array) <= 1:\n",
+    "        return array\n",
     "    else:\n",
-    "        return n\n",
-    "\n",
-    "def merge(n, left, right):\n",
-    "    # left and right are sorted arrays ex [1, 2, 3, 4] , [2, 3, 4, 5] we just have to check the first element in each\n",
-    "    if not len(left):\n",
-    "        return right\n",
-    "    if not len(right):\n",
-    "        return left\n",
-    "    i = 0 # left counter\n",
-    "    j = 0 # right counter\n",
+    "        mid = len(array)/2\n",
+    "        left = array[:mid] # requires extra space\n",
+    "        right = array[mid:] # slicing operator is 0(k) =(\n",
+    "        mergesort(left) # assumed left half and right half are sorted here --\n",
+    "        mergesort(right)\n",
+    "        return merge(left, right, array)\n",
+    "    \n",
+    "def merge(left, right, array):\n",
+    "    \"\"\"\n",
+    "    0(n)\n",
+    "    \"\"\"\n",
+    "    i = 0\n",
+    "    j = 0\n",
     "    k = 0\n",
-    "    while i < len(left) and j < len(right):\n",
-    "        print \"left[i]\", left[i]\n",
-    "        print \"right[j]\", right[j]\n",
+    "    while i < len(left) and j < len(right): # this will terminate once we reach the end of either side. if that happens, all elements in the oppisite side must be larger\n",
     "        if left[i] < right[j]:\n",
-    "            n[k] = left[i]\n",
+    "            array[k] = left[i]\n",
     "            i += 1\n",
-    "            k +=1\n",
     "        else:\n",
-    "            n[k] = right[j]\n",
+    "            array[k] = right[j]\n",
     "            j += 1\n",
-    "            k += 1\n",
-    "    return n\n"
+    "        k += 1\n",
+    "\n",
+    "    while i < len(left): # this will engage if all elements in the left side are larger than the right\n",
+    "        array[k] = left[i]\n",
+    "        i += 1\n",
+    "        k += 1\n",
+    "\n",
+    "    while j < len(right):\n",
+    "        array[k] = right[j]\n",
+    "        j += 1\n",
+    "        k += 1    \n",
+    "\n",
+    "    return array           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 275,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input: [5, 4, 1, 8, 7, 2, 6, 3]\n",
-      "input: [5, 4, 1, 8]\n",
-      "input: [5, 4]\n",
-      "input: [5]\n",
-      "input: [4]\n",
-      "left: [5]\n",
-      "right: [4]\n",
-      "left[i] 5\n",
-      "right[j] 4\n",
-      "input: [1, 8]\n",
-      "input: [1]\n",
-      "input: [8]\n",
-      "left: [1]\n",
-      "right: [8]\n",
-      "left[i] 1\n",
-      "right[j] 8\n",
-      "left: [4, 4]\n",
-      "right: [1, 8]\n",
-      "left[i] 4\n",
-      "right[j] 1\n",
-      "left[i] 4\n",
-      "right[j] 8\n",
-      "left[i] 4\n",
-      "right[j] 8\n",
-      "input: [7, 2, 6, 3]\n",
-      "input: [7, 2]\n",
-      "input: [7]\n",
-      "input: [2]\n",
-      "left: [7]\n",
-      "right: [2]\n",
-      "left[i] 7\n",
-      "right[j] 2\n",
-      "input: [6, 3]\n",
-      "input: [6]\n",
-      "input: [3]\n",
-      "left: [6]\n",
-      "right: [3]\n",
-      "left[i] 6\n",
-      "right[j] 3\n",
-      "left: [2, 2]\n",
-      "right: [3, 3]\n",
-      "left[i] 2\n",
-      "right[j] 3\n",
-      "left[i] 2\n",
-      "right[j] 3\n",
-      "left: [1, 4, 4, 8]\n",
-      "right: [2, 2, 6, 3]\n",
-      "left[i] 1\n",
-      "right[j] 2\n",
-      "left[i] 4\n",
-      "right[j] 2\n",
-      "left[i] 4\n",
-      "right[j] 2\n",
-      "left[i] 4\n",
-      "right[j] 6\n",
-      "left[i] 4\n",
-      "right[j] 6\n",
-      "left[i] 8\n",
-      "right[j] 6\n",
-      "left[i] 8\n",
-      "right[j] 3\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[1, 2, 2, 4, 4, 6, 3, 3]"
+       "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merge_sort(n)"
+    "mergesort(n)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 2, 3, 3, 4, 4, 6]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sorted(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 2, 4, 4, 6, 3, 3]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
