--- a/algorithms/Recursion.ipynb
+++ b/algorithms/Recursion.ipynb
@@ -263,6 +263,283 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def to_str(n, base):\n",
+    "    convert_string = \"0123456789ABCDEF\"\n",
+    "    if n < base:\n",
+    "        return convert_string[n]\n",
+    "    else:\n",
+    "        return to_str(n/base, base) + convert_string[n%base]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1010'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "to_str(10, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def reverse(s):\n",
+    "    if len(s) <= 1:\n",
+    "        return s\n",
+    "    else:\n",
+    "        return reverse(s[1:]) + s[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'woem'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reverse(\"meow\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def palindrome(s):\n",
+    "    if s == reverse(s):\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palindrome(\"kayak\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from stack import Stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rStack = Stack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def to_Str(n, base):\n",
+    "    convert_string = \"0123456789ABCDEF\"\n",
+    "    while n > 0: # base case\n",
+    "        if n < base: # base case\n",
+    "            rStack.push(convert_string[n])\n",
+    "        else:\n",
+    "            rStack.push(convert_string[n % base])\n",
+    "        n = n / base\n",
+    "    print rStack.items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['D', 'A', '5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "to_Str(1453, 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "res = \"\"\n",
+    "while not rStack.is_empty():\n",
+    "    res += str(rStack.pop())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5AD'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<stack.Stack instance at 0x7f8c4461d830>"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rStack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# tower of hanoi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def move_tower(height, from_pole, to_pole, with_pole):\n",
+    "    if height >= 1:\n",
+    "        move_tower(height-1, from_pole, with_pole, to_pole)\n",
+    "        move_disk(from_pole, to_pole)\n",
+    "        move_tower(height-1, with_pole, to_pole, from_pole)\n",
+    "        \n",
+    "def move_disk(fp, tp):\n",
+    "    print \"moving disk from\", fp, \"to\", tp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moving disk from A to C\n",
+      "moving disk from A to B\n",
+      "moving disk from C to B\n"
+     ]
+    }
+   ],
+   "source": [
+    "move_tower(2, \"A\", \"B\", \"C\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
